fix waterfall data path

--- a/waterfall.html
+++ b/waterfall.html
@@ -4,7 +4,7 @@
     </head>
     <link href="css.css" type="text/css" rel="stylesheet" />
     <script type="text/javascript" src="waterfall.js"></script>
-    <script type="text/javascript" src="wfdata.js"></script>
+    <script type="text/javascript" src="data/wfdata.js"></script>
     <script type="text/javascript">
 
 
