--- a/chart.html
+++ b/chart.html
@@ -1,5 +1,5 @@
 <html><head><title>gt</title>
-<link href="../../css.css" type="text/css" rel="stylesheet" />
+<link href="css.css" type="text/css" rel="stylesheet" />
 <script type="text/javascript" src="chart.js"></script>
 <script type="text/javascript" src="data/fmcwsums.js"></script>
 
