--- a/var/fmcw.html
+++ b/var/fmcw.html
@@ -85,6 +85,7 @@
 
     if (do_websox) {
         var uri="ws://localhost:5070/";
+        // var uri="ws://localhost:5071/";
 
          console.log("attempting ws connection to ",uri);
          const ws = new WebSocket(uri);
@@ -143,7 +144,7 @@
         },{
             type: "xy",
             name: "edges",
-            color: "#3300ff",
+            color: "#0033ff",
             ptsize: 6,
             linesize: 2,
             min_y: -1,
