--- a/var/fmcw.html
+++ b/var/fmcw.html
@@ -144,7 +144,7 @@
         },{
             type: "xy",
             name: "edges",
-            color: "#0033ff",
+            color: "#0033dd",
             ptsize: 6,
             linesize: 2,
             min_y: -1,
